# blockrank-rag

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-rag.txt
configs/: default_ranker.yaml
data/: smoke_train_config.yaml  synthetic_icr.jsonl
docker/: Dockerfile
docs/: research-notes.md
examples/: gradio_app.py  quick_inference.py  simple_rag_demo.py  train_block_collate_example.py  train_synthetic.py
scripts/: bench_latency.py  eval_beir.py  eval_synthetic.py
src/blockrank_rag/: __init__.py  cli.py  collate.py  pipeline.py  ranker.py  utils.py
src/blockrank_rag/core/: attention.py  formatting.py
src/blockrank_rag/serving/: app.py
tests/: test_formatting.py  test_ranker_init.py
